template-html/css/design.css
/* ... */
input:focus + label,
textarea:focus + label {
    color: #352639;
    -webkit-transform: translateY(-1.5em);
    -moz-transform: translateY(-1.5em);
    -o-transform: translateY(-1.5em);
    -ms-transform: translateY(-1.5em);
    transform: translateY(-1.5em);
}

/* Message */

.message-wrapper {
    margin-bottom: 1em;
    padding: 0.75em 0;
    color: #464646;
    background: #e3e3e3;
}
.message-wrapper .fa {
    font-size: 1.5em;
    margin-right: 0.25em;
}
.message-wrapper .fa-exclamation-triangle {
    color: #f26c4f;
}
.message-wrapper .fa-info-circle {
    color: #4998fe;
}
.message-wrapper span {
    display: inline-block;
    vertical-align: top;
    line-height: 1.4em;
}

/* Infobulle */

.infobulle {
    position: fixed;
    top: 0;
    width: 100%;
    text-align: center;
    z-index: 43;
}
.infobulle .message-wrapper {
    max-width: 40em;
    margin: auto;
    text-align: center;
    padding: 0.75em 1em;
    border: 0.15em solid #352639;
    border-top: none;
    border-radius: 0 0 0.3em 0.3em;
}

/* Submit */

.submit-wrapper input[type="submit"] {
    display: inline-block;
    margin-bottom: 1em;
    width: 40%;
    max-width: 95%;
    color: #fff;
    font-size: 1.2em;
    background: #352639;
    border: none;
    cursor: pointer;
}
.submit-wrapper input[type="submit"]:hover {
    background: #291D2C;
}
a.secondsubmit {
    display: inline-block;
    margin-left: 1em;
    margin-bottom: 1em;
    padding: 0.75em 2em;
    color: #352639;
    font-size: 1em;
    line-height: 1.3em;
    text-decoration: none;
    background: #e3e3e3;
    border-radius: 0.5em;
}
a.secondsubmit:hover {
    background: #bebebe;
}
.submit-wrapper p {
    color: #818181;
}
.submit-wrapper p a {
    color: #818181;
}

/* NOTIFICATIONS */

#notifpage {
    margin: -1.5em 1em -1.5em 3.5em;
    padding: 1.5em 0;
    text-align: left;
    border-left: 0.15em solid #e3e3e3;
}
#notifpage ul {
    position: relative;
    margin-left: -2.5em;
}
#notifpage li {
    padding: 1.5em 1em;
    margin-bottom: 0.5em;
    background: #E3E3E3;
}
#notifpage .notifavatar {
    display: inline-block;
    width: 2.8m;
    height: 2.8em;
}
#notifpage .notifavatar img {
    width: 100%;
    height: 100%;
    border-radius: 100%;
}
#notifpage .notifcontent {
    display: inline-block;
    vertical-align: top;
    width: calc(100% - 3.8em);
    margin-left: 1em;
    font-size: 1.1em;
    line-height: 1.3em;
}
#notifpage .notifcontent a {
    color: #000;
}
#notifpage button.subbutton {
    margin-top: 1em;
    font-size: 1em;
}

/* ------ MEDIA QUERIES ------- */

@media screen and (max-width: 45em) {
    header #logo {
        width: 3.5em;
    }
    header #logo span,
    header #logo li:after,
    header #logo li:nth-child(even) a,
    header #logo ul:after {
        display: none;
    }
    header #logo:hover ul {
        position: static;
    }
    header #logo a {
        width: 2.4em;
        padding-right: 0.5em;
    }
    #addlink {
        float: none;
        text-align: center;
    }
    .postcontent,
    .linkfooter,
    .linkcomments,
    .linkmodif {
        margin-left: 3%;
        margin-right: 3%;
    }
    .linkabout a {
        padding: 1em 3%;
    }
    .commentavatar {
        width: 3.5em;
    }
    .commentadd textarea {
        width: calc(100% - 6em);
    }
    .submit-wrapper input[type="submit"] {
        width: 80%;
    }
    a.secondsubmit {
        width: 50%;
        margin-left: 0;
    }
    #pagination li.pagenumber {
        display: none;
    }
    /* Menu hamburger */
    #menu {
        display: none;
    }
    label[for=menu-toggle] {
        display: block;
    }
    label #menu-ico {
        position: fixed;
        right: 0%;
        padding: 1em 5%;
        cursor: pointer;
    }
    label #menu-ico i {
        font-size: 2em;
        color: #352639;
    }
    #menu-toggle:checked + #menu {
        display: block;
    }
    #menu {
        position: fixed;
        top: 4em;
        right: 0;
        height: calc(100% - 4em);
        width: 20em;
        max-width: 100%;
        background: #fff;
    }
    nav {
        float: none;
        margin: inherit;
    }
    nav a {
        display: block;
        width: inherit;
        height: inherit;
        margin: inherit;
        padding: 0.25em 5%;
        background: none;
        border-radius: 0;
        text-align: left;
    }
    nav a:hover {
        border-radius: 0;
    }
    nav i {
        margin-right: 1em;
    }
    nav span {
        display: inline-block;
    }
    span.onenotif {
        left: 0.5em;
        top: 0.5em;
        width: 0.5em;
        height: 0.5em;
        border-width: 0.15em;
    }
    #menuright {
        float: none;
        text-align: center;
    }
    #menuright a.decolink {
        width: inherit;
        margin-top: 0.5em;
        padding: 0 1em;
        text-align: center;
        font-size: 0.85em;
        background: #ddd;
    }
    #menuright a.decolink::after {
        content: ' ';
        clear: both;
    }
    #menuright a.decolink span {
        display: inline-block;
        color: #352639;
        clear: both;
    }
    select#fcat {
        margin-top: 1.5em;
    }
    #notifpage .notifcontent {
        width: calc(100% - 4em);
        font-size: 1em;
    }
    .linkheadwrap {
        padding: 1.5em 3% 0;
    }
}
@media screen and (max-width: 25em) {
    .linkdomain {
        float: none;
        display: block;
        margin-bottom: 1em;
        font-size: 0.9em;
    }
    span.linkaccess {
        float: none;
        margin: auto;
    }
}

/* ANIMATIONS */

@keyframes anisendbutton {
    0% {
        transform: translate(-4em, 3em);
    }
    100% {
        transform: translate(0px, 0px);
    }
}
@-moz-keyframes anisendbutton {
    0% {
        -moz-transform: translate(-4em, 3em);
    }
    100% {
        -moz-transform: translate(0px, 0px);
    }
}
/* ... */

